<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_ship_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/vendor_dialog_header"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="#f6f6f6">

                <TextView
                    android:id="@+id/vendor_dialog_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|left"
                    android:layout_marginLeft="5dp"
                    android:text="@string/booking_vendor_dialog_title"
                    style="@style/FlatButton"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical|right">

                    <CheckBox
                        android:id="@+id/vendor_dialog_select_all_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|right"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|right"
                        android:layout_marginRight="25dp"
                        android:text="@string/select_all"/>
                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/vendor_dialog_add_vendor_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="+ Add New Vendor"
                android:gravity="center"
                android:background="#fafafa"
                style="@style/FlatButton"/>

            <TextView
                android:id="@+id/vendor_dialog_no_vendors_message"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:gravity="center"
                android:text="No vendors added"
                android:textSize="12sp"
                android:textColor="#898989"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/vendor_dialog_container"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scrollbars="vertical" />


            <RelativeLayout
                android:id="@+id/vendor_dialog_footer"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="#f6f6f6">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/vendor_dialog_vendor_msg_count"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/zero"
                        android:textSize="13sp"
                        android:textColor="#898989"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/booking_vendor_dialog_selected"
                        android:textSize="13sp"
                        android:textColor="#898989"
                        android:gravity="center" />
                </LinearLayout>

                <Button
                    android:id="@+id/vendor_dialog_cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:text="@string/cancel"
                    style="@style/FlatButton"/>

                <Button
                    android:id="@+id/vendor_dialog_send_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:text="@string/send_request"
                    style="@style/FlatButton"/>

            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>