<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            card_view:cardElevation="0dp"
            card_view:cardCornerRadius="5dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#ffffff">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:textColor="#000000"
                        android:gravity="center"
                        android:layout_marginTop="47dp"
                        android:layout_marginBottom="9dp"
                        android:text="@string/booking_received" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="#898989"
                        android:gravity="center"
                        android:layout_marginBottom="35dp"
                        android:text="@string/booking_result_desc" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#979797"/>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="187dp"
                    android:background="#f5f5f5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textColor="#898989"
                            android:gravity="center"
                            android:layout_marginTop="25dp"
                            android:text="@string/booking_result_desc_extra"
                            android:layout_marginBottom="17dp" />

                        <Button
                            android:id="@+id/booking_result_request_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:textColor="#878787"
                            android:textAllCaps="false"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:text="@string/request_vendors"
                            android:layout_marginBottom="3dp" />

                        <Button
                            android:id="@+id/booking_result_cancel_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:textColor="#878787"
                            android:textAllCaps="false"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:text="@string/no_thanks" />

                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center_horizontal|top">

            <View
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/green_border_circle" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="14dp"
                android:paddingTop="1dp"
                android:src="@drawable/check"/>

        </RelativeLayout>


    </RelativeLayout>

</LinearLayout>