<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_confirmed"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rlCnfMainContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="8dp"
            android:paddingStart="20dp"
            android:paddingTop="8dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmed_status"
                android:id="@+id/textView6"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                style="@style/TextLabel"
                android:layout_marginBottom="12dp"
                android:background="@color/colorConfirmStatus"
                android:theme="@style/transaction_status"
                android:textColor="@color/cardview_light_background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pickup_from"
                android:id="@+id/textView7"
                android:layout_below="@+id/textView6"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:theme="@style/TextLabel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drop_at"
                android:id="@+id/textView8"
                android:theme="@style/TextLabel"
                android:layout_alignTop="@+id/textView7"
                android:layout_toLeftOf="@+id/imageView2"
                android:layout_toStartOf="@+id/imageView2"
                android:layout_marginRight="84dp"
                android:layout_marginEnd="84dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvQRDropAt"
                android:layout_below="@+id/textView8"
                android:layout_alignLeft="@+id/textView8"
                android:layout_alignStart="@+id/textView8"
                android:theme="@style/CardTextValue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvQRPickupFrom"
                android:layout_below="@+id/textView7"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:theme="@style/CardTextValue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_truck"
                android:id="@+id/textView11"
                android:layout_below="@+id/tvQRPickupFrom"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:theme="@style/TextLabel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:id="@+id/tvCnfNumberOfTrucks"
                android:layout_below="@+id/textView11"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:theme="@style/CardTextValue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shipment_date"
                android:id="@+id/textView13"
                android:layout_below="@+id/tvQRDropAt"
                android:layout_alignLeft="@+id/tvQRDropAt"
                android:layout_alignStart="@+id/tvQRDropAt"
                android:theme="@style/TextLabel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvCnfShipmentDate"
                android:layout_below="@+id/textView13"
                android:layout_alignLeft="@+id/textView13"
                android:layout_alignStart="@+id/textView13"
                android:theme="@style/CardTextValue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvCnfTransactionID"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView6"
                android:layout_toEndOf="@+id/textView6"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:theme="@style/CardTransactionID" />

            <ImageView
                android:layout_width="@dimen/go_right_width"
                android:layout_height="@dimen/go_right_height"
                android:id="@+id/imageView2"
                android:src="@mipmap/ic_go_right"
                android:layout_marginRight="17dp"
                android:layout_marginEnd="17dp"
                android:layout_alignBottom="@+id/tvQRDropAt"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/subcontent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f6f6f6"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvConfirmAmountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical|right"
                android:paddingTop="2dp"
                android:text="@string/amout"
                android:textColor="@color/card_text_color_1"
                android:textSize="@dimen/card_text_label_3" />

            <TextView
                android:id="@+id/tvConfirmAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@+id/tvConfirmAmountLabel"
                android:layout_toRightOf="@+id/tvConfirmAmountLabel"
                android:gravity="center_vertical|right"
                android:textColor="@color/card_text_color_2"
                android:textSize="@dimen/card_text_label_1"
                android:textStyle="bold"
                android:theme="@style/CardAmountText" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
